# ckks-rust

./: .gitignore  Cargo.toml  README.md
algebra/: Cargo.toml
algebra/src/: crt.rs  lib.rs  ntt.rs  utils.rs
algebra/tests/: test.rs
playground/: Cargo.toml
playground/src/: main.rs  mnist.rs
polyr/: Cargo.toml  README.md
polyr/src/: lib.rs  polynomial_ring.rs
polyr/tests/: test.rs
python_sanity/: rlwe.py
rlwe/: Cargo.toml
rlwe/benches/: benchmark.rs
rlwe/src/: encoder.rs  lib.rs
rlwe/tests/: test.rs
web/: .gitignore  README.md  package.json  tailwind.config.js
web/src/: app.css  index.html
whitepaper/: whitepaper.tex
whitepaper/benchmarks/v0.1.0/: benchmarks.tex
