[package]
name = "polyr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
rand = "0.8"
rand_distr = "0.4"
num-bigint = { version = "0.4.2", features = ["rand"] }
num-traits = "0.2.14"
