[package]

name = "rlwe"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polyr = { path = "../polyr/" }
algebra = { path = "../algebra" }
arrayvec = "0.7.1"
approx = "0.5.0"
num-bigint = "0.4.2"
num-rational = "0.4.0"
num-traits = "0.2.14" 
num-complex = "0.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
